Refactors code, use Spring Boot validation and Adds GlobalExceptionHandler (#45)
* improves code quality (#43)

* Improves code quality
* Uses Spring Boots built in validation (e.g. @Size, @NotBlank, @Email)
etc.
* Migrated to constructor injection
* update tests to reflect new dependency injection

---------
* Auto login after registration and clear console errors in prod

* make eslint happy

* Validation fixes

* optimise code

* limit cors method permissions

* improve error handling on task service

* be consistent with error messages

* use optional instead of null

* create register dto

* Fixes from code review

follow REST api naming conventions

edit cors origins

Fix test

send password confirm upon register in frontend
---------

Reviewed-by: Copilot <175728472+Copilot@users.noreply.github.com>